--- a/resources/design/ui/Node.ui
+++ b/resources/design/ui/Node.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>175</width>
+    <width>283</width>
     <height>88</height>
    </rect>
   </property>
@@ -87,14 +87,11 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <layout class="QGridLayout" name="grid">
      <property name="spacing">
       <number>0</number>
      </property>
-     <property name="sizeConstraint">
-      <enum>QLayout::SetMinimumSize</enum>
-     </property>
-     <item>
+     <item row="0" column="0">
       <widget class="QPushButton" name="openParametersButton">
        <property name="minimumSize">
         <size>
@@ -132,7 +129,7 @@
        </property>
       </widget>
      </item>
-     <item>
+     <item row="0" column="1">
       <widget class="QPushButton" name="openButton">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
@@ -179,7 +176,7 @@
        </property>
       </widget>
      </item>
-     <item>
+     <item row="0" column="2">
       <widget class="QPushButton" name="openResultButton">
        <property name="minimumSize">
         <size>
