--- a/resources/design/ui/MainView.ui
+++ b/resources/design/ui/MainView.ui
@@ -36,6 +36,14 @@
     </widget>
     <addaction name="menuPreferences"/>
    </widget>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionOpenSession"/>
+    <addaction name="actionNewSession"/>
+   </widget>
+   <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -55,6 +63,16 @@
    </property>
    <property name="priority">
     <enum>QAction::NormalPriority</enum>
+   </property>
+  </action>
+  <action name="actionNewSession">
+   <property name="text">
+    <string>new session</string>
+   </property>
+  </action>
+  <action name="actionOpenSession">
+   <property name="text">
+    <string>open session</string>
    </property>
   </action>
  </widget>
